--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,7 +13,7 @@
     </script>
     <title>blog</title>
 	<meta property="og:title" content="pedroluz" />
-	<meta property="og:url" content="https://pedroluz.com.br/pages/musica" />
+	<meta property="og:url" content="https://pedroluz.com.br/pages/blog" />
 	<meta property="og:image" content="../images/og.jpg" />
 	<meta property="og:description" content="Blog 📓" />
     <meta charset="utf-8" />
