--- a/pages/blog.html
+++ b/pages/blog.html
@@ -62,7 +62,7 @@
   <section class="cardblog">
         <img src="../images/blog/sta_marta/thumb.jpg" width=100% height= 100% alt="" />
         <h2>Farol de Santa Marta</h2>
-        <i>a Kombi e a decisão de pegar a estrada</i><br>
+        <i>O velho, a Kombi e a decisão de pegar a estrada</i><br>
       <sub>01 abr, 2024</sub>
   </section>
 </a>
