Reorganização da liberdade

--- a/pages/acompanhe.html
+++ b/pages/acompanhe.html
@@ -41,14 +41,7 @@
             <a href="videoclipes">videoclipes</a>
         </div>
     </div>
-    <div class="dropdown">
-        <div class="dropbtn">estrada
-        </div>
-        <div class="dropdown-content">
-            <a href="blog">blog</a>
-            <a href="mapa">mapa</a>
-        </div>
-    </div>
+    <a href="projetos">projetos</a>
     <a href="acompanhe">me acompanhe</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
@@ -61,7 +54,15 @@
 	<p>Deixa teu telefone aí embaixo pra receber atualizações por Whatsapp 💜
     <iframe data-tally-src="https://tally.so/embed/3lyrgW?transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="157" frameborder="0" marginheight="0" marginwidth="0" title="Telefone"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 </p>
+<h4>Um mapa mostrando por
+    <span style="color: #7d7d7d; font-weight: bold">onde andei</span> e
+    <span style="color: #CC3366; font-weight:bold">onde eu tô agora</span></h4>
+
 </div>
+<section class="wrapper style1 align-left">
+  <iframe class="mapa" src="https://www.google.com/maps/d/u/0/embed?mid=1hwgIgDHqUs8oOdlKRu08w9-xWRK9gqQ&ehbc=2E312F" width="640" height="480"></iframe>
+<!-- Scripts -->
+</section>
 <script src="//embed.typeform.com/next/embed.js"></script>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/jquery.scrollex.min.js"></script>
