--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -11,17 +11,17 @@
 
     gtag('config', 'G-YGNLG9HTHM');
     </script>
-    <title>mapa</title>
+    <title>blog</title>
 	<meta property="og:title" content="pedroluz" />
-	<meta property="og:url" content="https://pedroluz.com.br/pages/mapa" />
+	<meta property="og:url" content="https://pedroluz.com.br/pages/blog" />
 	<meta property="og:image" content="../images/og.jpg" />
-	<meta property="og:description" content="Mapa 🗺️" />
+	<meta property="og:description" content="Blog 📓" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css"/>
-    <link rel="stylesheet" href="../assets/css/mapa.css"/>
+    <link rel="stylesheet" href="../assets/css/blog.css"/>
     <noscript>
         <link rel="stylesheet" href="../assets/css/noscript.css" />
     </noscript>
@@ -56,16 +56,16 @@
     </a>
 </div>
 
-<!-- Gallery -->
 <div class="page-title">
-	<h2>Mapa</h2>
-	<p>Um mapa mostrando alguns dos lugares que eu já passei
-        <br>Clica neles pra ir pro texto no blog. 🌎</p>
+	<h2>Projetos</h2>
+	<p>Um espaço pra eu colocar todos os outros projetos<br>
+        que assim como eu não cabem direito nas caixinhas 🦩</p>
 </div>
+
 <section class="wrapper style1 align-left">
-  <iframe class="mapa" src="https://www.google.com/maps/d/u/0/embed?mid=1hwgIgDHqUs8oOdlKRu08w9-xWRK9gqQ&ehbc=2E312F" width="640" height="480"></iframe>
+<div class="items style3 medium onscroll-fade-in">
+    
 <!-- Scripts -->
-</section>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/jquery.scrollex.min.js"></script>
 <script src="../assets/js/jquery.scrolly.min.js"></script>
