Reorganização da liberdade

--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -42,14 +42,7 @@
             <a href="videoclipes">videoclipes</a>
         </div>
     </div>
-    <div class="dropdown">
-        <div class="dropbtn">estrada
-        </div>
-        <div class="dropdown-content">
-            <a href="blog">blog</a>
-            <a href="mapa">mapa</a>
-        </div>
-    </div>
+<a href="projetos">projetos</a>
     <a href="acompanhe">me acompanhe</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
