Reorganização da liberdade

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>pedroluz</h1>
-							<p class="major">Mais de 10 anos criticando as redes sociais.<br>
-								Só agora entendi que não quero participar daquilo.<br>
+							<p class="major">Mais de 10 anos criticando as redes sociais. 
+								Finalmente cansei de ter minha criatividade pautada por algoritmos.<br>
 								Foi pra cá que eu fugi.
 							<ul class="actions stacked">
 								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
