--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -11,11 +11,11 @@
 
     gtag('config', 'G-YGNLG9HTHM');
     </script>
-    <title>blog</title>
+    <title>projetos</title>
 	<meta property="og:title" content="pedroluz" />
-	<meta property="og:url" content="https://pedroluz.com.br/pages/blog" />
+	<meta property="og:url" content="https://pedroluz.com.br/pages/projetos" />
 	<meta property="og:image" content="../images/og.jpg" />
-	<meta property="og:description" content="Blog 📓" />
+	<meta property="og:description" content="Projetos 📓" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
