Reorganização da liberdade

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -51,8 +51,8 @@
 
 <div class="page-title">
 	<h2>Projetos</h2>
-	<p>Um espaço pra eu colocar todos os outros projetos<br>
-        que assim como eu não cabem direito nas caixinhas 🦩</p>
+	<p>Um espaço pra eu colocar futuros projetos<br>
+        que assim como eu não cabem direito nas caixinhas 🦩<br></p>
 </div>
 
 <section class="wrapper style1 align-left">
