--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -52,7 +52,8 @@
 <div class="page-title">
 	<h2>Projetos</h2>
 	<p>Um espaço pra eu colocar futuros projetos<br>
-        que assim como eu não cabem direito nas caixinhas 🦩<br></p>
+        que assim como eu não cabem direito nas caixinhas 🦩<br>
+    (ainda vazio)</p>
 </div>
 
 <section class="wrapper style1 align-left">
