--- a/pages/projetos/criatura.html
+++ b/pages/projetos/criatura.html
@@ -13,8 +13,8 @@
     </script>
     <title>Uma criaturinha interessante</title>
     <meta property="og:title" content="Uma criaturinha interessante" />
-    <meta property="og:url" content="https://pedroluz.com.br/pages/blog/criatura" />
-    <meta property="og:image" content="../../images/blog/criatura/thumb.jpg" />
+    <meta property="og:url" content="https://pedroluz.com.br/pages/projetos/criatura" />
+    <meta property="og:image" content="../../images/projetos/criatura/thumb.jpg" />
     <meta property="og:description" content="Escritos 📓" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -51,7 +51,7 @@
         <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
     </a>
 </div>
-<a href="../blog">
+<a href="../projetos">
     <img src="arrow.svg" alt="" />
 </a>
 <!-- Additional Elements -->
@@ -93,8 +93,8 @@
 <section class="wrapper style1 align-center">
     <div class="gallery style1 small lightbox onload-fade-in" id="main">
         <article class="thumb">
-            <a href="../../images/blog/criatura/IMG_6395.jpg" class="image">
-                <img src="../../images/blog/criatura/IMG_6395.jpg" alt="" />
+            <a href="../../images/projetos/criatura/IMG_6395.jpg" class="image">
+                <img src="../../images/projetos/criatura/IMG_6395.jpg" alt="" />
             </a>
             <div class="caption">
                 <ul class="actions fixed">
@@ -103,8 +103,8 @@
             </div>
         </article>
         <article class="thumb">
-            <a href="../../images/blog/criatura/criatura.png" class="image">
-                <img src="../../images/blog/criatura/criatura.png" alt="" />
+            <a href="../../images/projetos/criatura/criatura.png" class="image">
+                <img src="../../images/projetos/criatura/criatura.png" alt="" />
             </a>
             <div class="caption">
                 <ul class="actions fixed">
@@ -117,7 +117,7 @@
 </div>
 </section>
 
-<a href="../blog">
+<a href="../projetos">
     <img src="arrow.svg" alt="" />
 </a>
 </div>
