--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -21,7 +21,7 @@
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css"/>
-    <link rel="stylesheet" href="../assets/css/blog.css"/>
+    <link rel="stylesheet" href="../assets/css/projetos.css"/>
     <noscript>
         <link rel="stylesheet" href="../assets/css/noscript.css" />
     </noscript>
@@ -52,13 +52,20 @@
 <div class="page-title">
 	<h2>Projetos</h2>
 	<p>Um espaço pra eu colocar futuros projetos<br>
-        que assim como eu não cabem direito nas caixinhas 🦩<br>
-    (ainda vazio)</p>
+        que assim como eu não cabem direito nas caixinhas 🦩</p>
 </div>
 
 <section class="wrapper style1 align-left">
 <div class="items style3 medium onscroll-fade-in">
     
+    <a href="projetos/criatura" style="text-decoration: none">
+      <section class="cardproj">
+            <img src="../images/projetos/criatura/thumb.jpg" width=100% height= 100% alt="" />
+            <h2>Uma criaturinha interessante</h2>
+            <i>O velho, a Kombi e a decisão de pegar a estrada</i><br>
+          <sub><span style="background-color: #dc2aff;"> criativa </span></sub>
+      </section>
+    </a>
 <!-- Scripts -->
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/jquery.scrollex.min.js"></script>
