--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -51,8 +51,8 @@
 
 <div class="page-title">
 	<h2>Projetos</h2>
-	<p>Um espaço pra eu colocar futuros projetos<br>
-        que assim como eu não cabem direito nas caixinhas 🦩</p>
+	<p>Um espaço pra eu colocar futuros projetos que<br>
+        assim como eu não cabem direito nas caixinhas 🦩</p>
 </div>
 
 <section class="wrapper style1 align-left">
@@ -62,8 +62,8 @@
       <section class="cardproj">
             <img src="../images/projetos/criatura/thumb.jpg" width=100% height= 100% alt="" />
             <h2>Uma criaturinha interessante</h2>
-            <i>O velho, a Kombi e a decisão de pegar a estrada</i><br>
-          <sub><span style="background-color: #dc2aff;"> criativa </span></sub>
+            <i>Um encontro na beira do rio</i><br>
+          <sub style="text-align: right;"><span class="tag-escrita"> escrita criativa </span></sub> <br><br>
       </section>
     </a>
 <!-- Scripts -->
