Atualizando página inicial

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								Finalmente cansei de ter minha criatividade pautada por algoritmos.<br>
 								Foi pra cá que eu fugi.
 							<ul class="actions stacked">
-								<li><a href="pages/acompanhe" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
+								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
 							</ul>
 						</div>
 						<div class="image">
