--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-<!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-YGNLG9HTHM"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-	
-		gtag('config', 'G-YGNLG9HTHM');
-		</script>
-		<title>pedroluz</title>
-		<meta property="og:title" content="pedroluz" />
-		<meta property="og:url" content="https://pedroluz.com.br" />
-		<meta property="og:description" content="Minha casinha na internet 🧙" />
-		<meta property="og:image" content="images/og.jpg" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="shortcut icon" href="assets/favicons/favicon.ico" type="image/x-icon">
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
-
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<h1>pedroluz</h1>
-							<p class="major">Mais de 10 anos criticando as redes sociais. 
-								Finalmente cansei de ter minha criatividade pautada por algoritmos.<br>
-								Foi pra cá que eu fugi.
-							<ul class="actions stacked">
-								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/banner.png" alt="" />
-						</div>
-					</section>
-
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://pedroluz.com.br/musica" />
