Transformando página inicial em Música

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 	<title>música</title>
 	<meta property="og:title" content="pedroluz" />
-	<meta property="og:url" content="https://pedroluz.com.br/musica" />
+	<meta property="og:url" content="https://pedroluz.com.br/" />
 	<meta property="og:image" content="images/og.jpg" />
 	<meta property="og:description" content="Músicas 🌷" />
 	<meta charset="utf-8" />
