Revertendo página inicial

--- a/index.html
+++ b/index.html
@@ -1,166 +1,56 @@
 <!DOCTYPE HTML>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-
-<head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGNLG9HTHM"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-YGNLG9HTHM');
-    </script>
-	<title>música</title>
-	<meta property="og:title" content="pedroluz" />
-	<meta property="og:url" content="https://pedroluz.com.br/" />
-	<meta property="og:image" content="images/og.jpg" />
-	<meta property="og:description" content="Músicas 🌷" />
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="shortcut icon" href="assets/favicons/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/navbar.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
-</head>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<div class="topnav" id="myTopnav">
-	<a href="index" class="logo"><img src="assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
-			alt="" /></a>
-	<div class="dropdown">
-		<div class="dropbtn">arte
-		</div>
-		<div class="dropdown-content">
-			<a href="musica">música</a>
-			<a href="poesia">poesia</a>
-            <a href="videoclipes">videoclipes</a>
-		</div>
-	</div>
-	<a href="projetos">projetos</a>
-	<a href="acompanhe">me acompanhe</a>
-	<a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
-        menu
-		<i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
-	</a>
-</div>
-<!-- Gallery -->
-<div class="page-title">
-	<h2>Músicas</h2>
-	<p>Clica nos links das plataformas pra escutar as músicas! 🌷</p>	
-		<a href="https://open.spotify.com/artist/2rj8ccj3Z0rfVh18nxzZUQ" target="_blank" >
-			<img src="images/spotify.png" width=110px alt="" />
-		</a>
-		<a href="https://www.youtube.com/@pedroluzer" target="_blank">
-			<img src="images/youtube.jpg" width=110px alt="" /></a>
-		</a>
-		</div>
-<!-- Sonho lúcido -->
-<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
-	id="first">
-	<div class="content">
-		<h3>Sonho lúcido</h3><sup>2023</sup>
-		<p></p>
-		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
-		</a>
-		<a href="https://www.youtube.com/watch?v=aAVAkcR-cR0" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
-		</a>
-	</div>
-	<div class="image">
-		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
-		<img src="images/músicas/sonho lúcido.jpg" alt="" />
-		</a>
-	</div>
-</section>
-
-<!-- 1000 Caminhos -->
-<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
-	id="first">
-	<div class="content">
-		<h3>1000 Caminhos</h3><sup>2023</sup>
-		<p></p>
-		<a href="https://open.spotify.com/track/6qj9Q3dQmrwGR8tTPFJKuH" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" /></a>
-		<a href="https://www.youtube.com/watch?v=NRdQ2uLZBuo" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
-	</div>
-	<div class="image">
-		<a href="https://open.spotify.com/track/6qj9Q3dQmrwGR8tTPFJKuH" target="_blank">
-		<img src="images/músicas/1000 caminhos.jpg" alt="" />
-		</a>
-	</div>
-</section>
-<!-- Sonho lúcido -->
-<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
-	id="first">
-	<div class="content">
-		<h3>Ghosting com o mundo</h3><sup>2021</sup>
-		<p></p>
-		<a href="https://open.spotify.com/track/6t8wNssH4bNZVcw5HlyVo6?si=42c60cacd2464db7" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
-		</a>
-		<a href="https://www.youtube.com/watch?v=rYWLafROaSc&pp=ygUIcGVkcm9sdXo" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
-		</a>
-	</div>
-	<div class="image">
-		<a href="https://open.spotify.com/track/6t8wNssH4bNZVcw5HlyVo6?si=42c60cacd2464db7" target="_blank">
-		<img src="images/músicas/ghosting.jpg" alt="" />
-	</a>
-	</div>
-</section>
-<!-- Sonho lúcido -->
-<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
-	id="first">
-	<div class="content">
-		<h3>nos querem infelizes :(</h3><sup>2020</sup>
-		<p></p>
-		<a href="https://open.spotify.com/track/3z6ucuggkQxdffEZPRMiID?si=57514d682119453a" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
-		</a>
-		<a href="https://www.youtube.com/watch?v=31O2xUpBgo0" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
-		</a>
-	</div>
-	<div class="image">
-		<a href="https://open.spotify.com/track/3z6ucuggkQxdffEZPRMiID?si=57514d682119453a" target="_blank">
-		<img src="images/músicas/nos querem infelizes.jpg" alt="" /></a>
-	</div>
-</section>
-<!-- Sonho lúcido -->
-<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
-	id="first">
-	<div class="content">
-		<h3>Millennial (ou só mais um disco de rap feito por um menino branco)</h3><sup>2019</sup>
-		<p></p>
-		<a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
-		</a>
-		<a href="https://www.youtube.com/watch?v=rGuLEts10KI" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
-		</a>
-	</div>
-	<div class="image">
-		<a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl" target="_blank">
-		<img src="images/músicas/millennial.jpg" alt="" />
-	</div>
-</section>
-
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/navbar.js"></script>
-
-</body>
-
+	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-YGNLG9HTHM"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	
+		gtag('config', 'G-YGNLG9HTHM');
+		</script>
+		<title>pedroluz</title>
+		<meta property="og:title" content="pedroluz" />
+		<meta property="og:url" content="https://pedroluz.com.br" />
+		<meta property="og:description" content="Minha casinha na internet 🧙" />
+		<meta property="og:image" content="images/og.jpg" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" href="assets/favicons/favicon.ico" type="image/x-icon">
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper" class="divided">
+				<!-- One -->
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h1>pedroluz</h1>
+							<p class="major">Mais de 10 anos criticando as redes sociais. 
+								Finalmente cansei de ter minha criatividade pautada por algoritmos.<br>
+								Foi pra cá que eu fugi.
+							<ul class="actions stacked">
+								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/banner.png" alt="" />
+						</div>
+					</section>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+	</body>
 </html>
