--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.png" alt="" />
+							<img src="images/banner.jpg" alt="" />
 						</div>
 					</section>
 		<!-- Scripts -->
