Mudanças na home e LP sonho lúcido adicionada

--- a/index.html
+++ b/index.html
@@ -25,32 +25,75 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="shortcut icon" href="assets/favicons/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="assets/css/navbar.css" />
+		<noscript>
+			<link rel="stylesheet" href="assets/css/noscript.css" />
+		</noscript>
 	</head>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<div class="topnav" id="myTopnav">
+		<a href="index" class="logo"><img src="assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
+				alt="" /></a>
+		<div class="dropdown">
+			<div class="dropbtn">arte
+			</div>
+			<div class="dropdown-content">
+				<a href="musica">música</a>
+				<a href="poesia">poesia</a>
+				<a href="videoclipes">videoclipes</a>
+			</div>
+		</div>
+		<a href="projetos">projetos</a>
+		<a href="acompanhe">me acompanhe</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
+			menu
+			<i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
+		</a>
+	</div>
+
 	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<h1>pedroluz</h1>
-							<p class="major">Mais de 10 anos criticando as redes sociais. 
-								Finalmente cansei de ter minha criatividade pautada por algoritmos.<br>
-								Foi pra cá que eu fugi.
-							<ul class="actions stacked">
-								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/banner.jpg" alt="" />
-						</div>
-					</section>
+	<div id="wrapper" class="divided">
+		<!-- One -->
+			<section class="banner style1 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+				<div class="content">
+					<h1>pedroluz</h1>
+					<p>Minha casinha na internet. 🧙🏻‍♂️
+					<ul class="actions stacked">
+						<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Músicas 🌷</a>
+							<a href="pages/poesia" class="button big wide smooth-scroll-middle">Poesias 🍃</a>
+							<a href="pages/videoclipes.html" class="button big wide smooth-scroll-middle">Videoclipes ▶️</a></li>
+						</ul>
+					<p>Plataformas e redes sociais: <br>
+					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+						<img src="images/spotify.png" width=90px alt="" style="margin-top: 20px" />
+					</a>
+					<a href="https://www.youtube.com/watch?v=aAVAkcR-cR0" target="_blank">
+						<img src="images/youtube.jpg" width=90px alt="" style="margin-top: 20px" /></a><br>
+					<a href="https://www.instagram.com/pedroluz._/" target="_blank">
+						<img src="images/instagram.png" width=90px alt="" style="margin-top: 20px"/></a>
+					<a href="https://www.tiktok.com/@_pedroluz" target="_blank">
+						<img src="images/tiktok.jpg" width=90px alt="" style="margin-top: 20px"/></a></p>
+				</div>
+				
+				<div class="image">
+					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+					<img src="images/banner.jpg" alt="" />
+					</a>
+				</div>
+
+			</section>
+
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/navbar.js"></script>
+
 	</body>
 </html>
