--- a/pages/projetos/criatura.html
+++ b/pages/projetos/criatura.html
@@ -34,7 +34,7 @@
 
 <div id="wrapper">
 <div class="topnav" id="myTopnav">
-    <a href="../../index" class="logo"><img src="../../favicons/favicon.ico" class="logo_img"
+    <a href="../../index" class="logo"><img src="../../assets/favicons/favicon.ico" class="logo_img"
             style="width:20px;float:center;" alt="" /></a>
     <div class="dropdown">
         <div class="dropbtn">arte
