bug de path das pages

--- a/pages/musica.html
+++ b/pages/musica.html
@@ -35,13 +35,13 @@
 		<div class="dropbtn">arte
 		</div>
 		<div class="dropdown-content">
-			<a href="musica">música</a>
-			<a href="poesia">poesia</a>
-            <a href="videoclipes">videoclipes</a>
+			<a href="pages/musica">música</a>
+			<a href="pages/poesia">poesia</a>
+            <a href="pages/videoclipes">videoclipes</a>
 		</div>
 	</div>
-	<a href="projetos">projetos</a>
-	<a href="acompanhe">me acompanhe</a>
+	<a href="pages/projetos">projetos</a>
+	<a href="pages/acompanhe">me acompanhe</a>
 	<a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
 		<i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
