bug de path das pages

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -36,13 +36,13 @@
         <div class="dropbtn">arte
         </div>
         <div class="dropdown-content">
-            <a href="pages/musica">música</a>
-            <a href="pages/poesia">poesia</a>
-            <a href="pages/videoclipes">videoclipes</a>
+            <a href="musica">música</a>
+            <a href="poesia">poesia</a>
+            <a href="videoclipes">videoclipes</a>
         </div>
     </div>
-<a href="pages/projetos">projetos</a>
-    <a href="pages/acompanhe">me acompanhe</a>
+<a href="projetos">projetos</a>
+    <a href="acompanhe">me acompanhe</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
         <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
@@ -58,7 +58,7 @@
 <section class="wrapper style1 align-left">
 <div class="items style3 medium onscroll-fade-in">
     
-    <a href="pages/projetos/criatura" style="text-decoration: none">
+    <a href="projetos/criatura" style="text-decoration: none">
       <section class="cardproj">
             <img src="../images/projetos/criatura/thumb.jpg" width=100% height= 100% alt="" />
             <h2>Uma criaturinha interessante</h2>
