bug de path das pages

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 					<h1>pedroluz</h1>
 					<p>Minha casinha na internet. 🧙🏻‍♂️
 					<ul class="actions stacked">
-						<li><a href="musica" class="button big wide smooth-scroll-middle">Músicas 🌷</a>
-							<a href="poesia" class="button big wide smooth-scroll-middle">Poesias 🍃</a>
-							<a href="videoclipes.html" class="button big wide smooth-scroll-middle">Videoclipes ▶️</a></li>
+						<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Músicas 🌷</a>
+							<a href="pages/poesia" class="button big wide smooth-scroll-middle">Poesias 🍃</a>
+							<a href="pages/videoclipes" class="button big wide smooth-scroll-middle">Videoclipes ▶️</a></li>
 						</ul>
 					<p>Plataformas e redes sociais: <br>
 					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
