--- a/pages/lps/sonholucido.html
+++ b/pages/lps/sonholucido.html
@@ -12,10 +12,10 @@
         gtag('config', 'G-YGNLG9HTHM');
     </script>
     <title>Uma criaturinha interessante</title>
-    <meta property="og:title" content="Uma criaturinha interessante" />
-    <meta property="og:url" content="https://pedroluz.com.br/pages/projetos/criatura" />
-    <meta property="og:image" content="../../images/projetos/criatura/thumb.jpg" />
-    <meta property="og:description" content="Escritos 📓" />
+    <meta property="og:title" content="Sonho Lúcido" />
+    <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sonholucido" />
+    <meta property="og:image" content="../../images/og.jpg" />
+    <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="shortcut icon" href="../../assets/favicons/favicon.ico" type="image/x-icon">
