bug de path das pages

--- a/pages/lps/sonholucido.html
+++ b/pages/lps/sonholucido.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'G-YGNLG9HTHM');
     </script>
+    <title>Sonho Lúcido</title>
     <meta property="og:title" content="Sonho Lúcido" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sonholucido" />
     <meta property="og:image" content="../../images/og.jpg" />
