Página mutts on the moon

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 							<a href="pages/videoclipes" class="button big wide smooth-scroll-middle">Videoclipes ▶️</a></li>
 						</ul>
 					<p>Plataformas e redes sociais: <br>
-					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+					<a href="https://open.spotify.com/artist/2rj8ccj3Z0rfVh18nxzZUQ" target="_blank">
 						<img src="images/spotify.png" width=90px alt="" style="margin-top: 20px" />
 					</a>
-					<a href="https://www.youtube.com/watch?v=aAVAkcR-cR0" target="_blank">
+					<a href="https://www.youtube.com/@pedroluzer" target="_blank">
 						<img src="images/youtube.jpg" width=90px alt="" style="margin-top: 20px" /></a><br>
 					<a href="https://www.instagram.com/pedroluz._/" target="_blank">
 						<img src="images/instagram.png" width=90px alt="" style="margin-top: 20px"/></a>
@@ -78,7 +78,7 @@
 				</div>
 				
 				<div class="image">
-					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+					<a href="https://open.spotify.com/artist/2rj8ccj3Z0rfVh18nxzZUQ" target="_blank">
 					<img src="images/banner.jpg" alt="" />
 					</a>
 				</div>
