Página mutts on the moon

--- a/pages/mutts.html
+++ b/pages/mutts.html
@@ -47,7 +47,7 @@
                     <p>Listen now 🐕</p>
 					<p>Follow our socials:</br>
 					
-					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+					<a href="" target="_blank">
 						<img src="../images/spotify.png" width=90px alt="" style="margin-top: 20px" />
 					</a>
 					<a href="https://www.youtube.com/@muttsonthemoon" target="_blank">
