test remove target blank

--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -76,7 +76,7 @@
                 <h1>sdds orkut 💜</h1>
                 <p><a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e"
                     class="button big wide smooth-scroll-middle">Escute agora 🦄</a></p><br>
-                    <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+                    <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
                         <img src="../../images/spotify.png" width=120px alt="" />
                     </a><p></p>
                     <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0" target="_blank">
