--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -79,14 +79,14 @@
                     <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
                         <img src="../../images/spotify.png" width=120px alt="" />
                     </a><p></p>
-                    <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0" target="_blank">
+                    <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0">
                         <img src="../../images/youtube.jpg" width=120px alt="" /></a>
                     </a>
                     <p><br><br></p>
             </div>
             
             <div class="image">
-                <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+                <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
                 <img src="../../images/músicas/sdds orkut.jpg" alt="" />
                 </a>
             </div>
