atualização links sdds orkut

--- a/pages/mutts.html
+++ b/pages/mutts.html
@@ -59,7 +59,7 @@
 				</div>
 				
 				<div class="image">
-					<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+					<a href="">
 					<img src="../images/mutts.jpg" alt="" />
 					</a>
 				</div>
