--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -74,9 +74,9 @@
         <section class="banner style1 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
             <div class="content">
                 <h1>sdds orkut 💜</h1>
-                <p><a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e"
+                <p><a href="https://open.spotify.com/track/1wvKiucBlfbGwKNgwox6kG"
                     class="button big wide smooth-scroll-middle">Escute agora 🦄</a></p><br>
-                    <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
+                    <a href="https://open.spotify.com/track/1wvKiucBlfbGwKNgwox6kG">
                         <img src="../../images/spotify.png" width=120px alt="" />
                     </a><p></p>
                     <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0">
@@ -86,7 +86,7 @@
             </div>
             
             <div class="image">
-                <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
+                <a href="https://open.spotify.com/track/1wvKiucBlfbGwKNgwox6kG">
                 <img src="../../images/músicas/sdds orkut.jpg" alt="" />
                 </a>
             </div>
