atualização links sdds orkut

--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -79,7 +79,7 @@
                     <a href="https://open.spotify.com/track/1wvKiucBlfbGwKNgwox6kG">
                         <img src="../../images/spotify.png" width=120px alt="" />
                     </a><p></p>
-                    <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0">
+                    <a href="https://www.youtube.com/watch?v=Z7onMZBUI7A">
                         <img src="../../images/youtube.jpg" width=120px alt="" /></a>
                     </a>
                     <p><br><br></p>
