atualização img url

--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -14,7 +14,7 @@
     <title>sdds orkut 💜</title>
     <meta property="og:title" content="sdds orkut 💜" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sddsorkut" />
-    <meta property="og:image" content="../../images/og.jpg" />
+    <meta property="og:image" content="../../images/músicas/sdds orkut.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
