LPs e atualização músicas

--- a/pages/lps/millennial.html
+++ b/pages/lps/millennial.html
@@ -11,11 +11,11 @@
 
         gtag('config', 'G-YGNLG9HTHM');
     </script>
-    <title>Sonho Lúcido</title>
-    <meta property="og:title" content="Sonho Lúcido" />
-    <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sonholucido" />
-    <meta property="og:image" content="../../images/músicas/sonho lúcido.jpg" />
-    <meta property="og:description" content="músicas 🧙🏻‍♂️" />
+    <title>Millennial</title>
+    <meta property="og:title" content="Millennial" />
+    <meta property="og:url" content="https://pedroluz.com.br/pages/lps/millennial" />
+    <meta property="og:image" content="../../images/músicas/millennial.jpg" />
+    <meta property="og:description" content="(ou só mais um disco de rap feito por um menino branco)" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="shortcut icon" href="../../assets/favicons/favicon.ico" type="image/x-icon">
@@ -56,21 +56,22 @@
     <!-- One -->
         <section class="banner style1 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
             <div class="content">
-                <h1>Sonho Lúcido 🧙🏻‍♂️</h1>
-                <p><a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e"
+                <h1>Millennial</h1>
+                <p>(ou só mais um disco de rap feito por um menino branco)</p>
+                <p><a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl"
                     class="button big wide smooth-scroll-middle">Escute agora 🦄</a></p><br>
-                    <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
+                    <a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl">
                         <img src="../../images/spotify.png" width=120px alt="" />
                     </a><p></p>
-                    <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0">
+                    <a href="https://www.youtube.com/watch?v=rGuLEts10KI">
                         <img src="../../images/youtube.jpg" width=120px alt="" /></a>
                     </a>
                     <p><br><br></p>
             </div>
             
             <div class="image">
-                <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
-                <img src="../../images/músicas/sonho lúcido.jpg" alt="" />
+                <a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl">
+                <img src="../../images/músicas/millennial.jpg" alt="" />
                 </a>
             </div>
 
