--- a/pages/lps/sentido.html
+++ b/pages/lps/sentido.html
@@ -11,10 +11,10 @@
 
         gtag('config', 'G-YGNLG9HTHM');
     </script>
-    <title>Sonho Lúcido</title>
-    <meta property="og:title" content="Sonho Lúcido" />
-    <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sonholucido" />
-    <meta property="og:image" content="../../images/músicas/sonho lúcido.jpg" />
+    <title>$entid0 👁️</title>
+    <meta property="og:title" content="$entid0 👁️" />
+    <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sentido" />
+    <meta property="og:image" content="../../images/músicas/sentido.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -56,21 +56,21 @@
     <!-- One -->
         <section class="banner style1 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
             <div class="content">
-                <h1>Sonho Lúcido 🧙🏻‍♂️</h1>
-                <p><a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e"
+                <h1>$entid0 👁️</h1>
+                <p><a href="https://open.spotify.com/track/06IUbzyxdblX6gy9FNmT3c"
                     class="button big wide smooth-scroll-middle">Escute agora 🦄</a></p><br>
-                    <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
+                    <a href="https://open.spotify.com/track/06IUbzyxdblX6gy9FNmT3c">
                         <img src="../../images/spotify.png" width=120px alt="" />
                     </a><p></p>
-                    <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0">
+                    <a href="https://www.youtube.com/watch?v=EhJ9prXb0N8">
                         <img src="../../images/youtube.jpg" width=120px alt="" /></a>
                     </a>
                     <p><br><br></p>
             </div>
             
             <div class="image">
-                <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
-                <img src="../../images/músicas/sonho lúcido.jpg" alt="" />
+                <a href="https://open.spotify.com/track/06IUbzyxdblX6gy9FNmT3c">
+                <img src="../../images/músicas/sentido.jpg" alt="" />
                 </a>
             </div>
 
