--- a/pages/musica.html
+++ b/pages/musica.html
@@ -58,6 +58,26 @@
 			<img src="../images/youtube.jpg" width=110px alt="" /></a>
 		</a>
 		</div>
+<!-- sdds orkut -->
+<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
+	id="first">
+	<div class="content">
+		<h3>sdds orkut</h3><sup>2025</sup>
+		<p></p>
+		<a href="https://open.spotify.com/track/1wvKiucBlfbGwKNgwox6kG" target="_blank">
+			<img src="../images/spotify.png" width=70px alt="" />
+		</a>
+		<a href="https://www.youtube.com/watch?v=Z7onMZBUI7A" target="_blank">
+			<img src="../images/youtube.jpg" width=70px alt="" /></a>
+		</a>
+	</div>
+	<div class="image">
+		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
+		<img src="../images/músicas/sdds orkut.jpg" alt="" />
+		</a>
+	</div>
+</section>
+
 <!-- Sonho lúcido -->
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
 	id="first">
