--- a/pages/lps/euacho.html
+++ b/pages/lps/euacho.html
@@ -14,7 +14,7 @@
     <title>eu acho</title>
     <meta property="og:title" content="eu acho" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/euacho" />
-    <meta property="og:image" content="../../images/músicas/euacho.jpg" />
+    <meta property="og:image" content="images/músicas/euacho.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
